# toxicity-emotion-detection

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: weights.json
notebooks/: compute_weights.ipynb  data_inspection.ipynb  experiments.ipynb  visualisations.ipynb
src/: baseline_train.py  compute_weights.py  eval_baseline.py  eval_multitask.py  eval_sequential.py  experiment_baseline.py  experiment_sequential.py  explainer_temp.py  extract_intermediates.py  model.py  multi_train.py  multitask_bert.py  prepare_data.py  process_data.py  quick_test.py  run_all_evals.py  sequential_train.py  test_baseline.py  test_sequential_quick.py  test_training_quick.py  toxicity_explainer.py  train_classifier.py  train_utils.py
src/FlexibleModel/: eval_baseline.py  evaluation.py  experiment_multitask.py  flexible_model.py
src/attention/: attention.py  attribution.py  compare.py  counterfactual.py  predictions.py  visualize.py
